[package]
name = "arcane-os-type"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }
starknet-core = { workspace = true }
blockifier = { workspace = true }
serde = { workspace = true, features = ["derive"] }
cairo-lang-starknet-classes = { workspace = true }
flate2 = { workspace = true }
serde_with = { workspace = true }