[package]
name = "arcane-os-type"
version = "0.1.0"
edition = "2021"

[dependencies]
blockifier = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
starknet-core = { workspace = true }
starknet-gateway-types = { workspace = true }
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }
thiserror = { workspace = true }
