[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-vm = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
blockifier = { workspace = true }
thiserror = { workspace = true }
starknet_api = { workspace = true }
starknet-core = { workspace = true }
num-bigint = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
ark-secp256k1 = { workspace = true }
ark-secp256r1 = { workspace = true }
ark-ec = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
indoc = { workspace = true }
cairo-type-derive = { workspace = true }
log = { workspace = true }
starknet-crypto = { workspace = true }
num-traits = { workspace = true }
c-kzg = { workspace = true }
num-integer = { workspace = true }
lazy_static = { workspace = true }
