[package]
name = "prove_block"
version = "0.1.0"
edition = "2021"

[dependencies]
arcane-os = { workspace = true }
arcane-os-type = { workspace = true }
blockifier = { workspace = true }
cairo-vm = { workspace = true }
log = { workspace = true }
rpc-replay = { workspace = true }
starknet = { workspace = true }
starknet-core = { workspace = true }
starknet-crypto = { workspace = true }
starknet_api = { workspace = true }
thiserror = { workspace = true }
rpc-client = { workspace = true }
num-bigint = { workspace = true }