[package]
name = "rpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
arcane-os = { workspace = true }
arcane-os-type = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
starknet = { workspace = true }
starknet-types-core = { workspace = true }
thiserror = { workspace = true }
