[package]
name = "rpc-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
arcane-os-type = { workspace = true }
blockifier = { workspace = true }
starknet = { workspace = true }
starknet_api = { workspace = true }
starknet-types-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rpc-client = { workspace = true }