[package]
name = "rpc-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
arcane-os-type = { workspace = true }
blockifier = { workspace = true }
rpc-client = { workspace = true }
starknet = { workspace = true }
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
